176 assertion failed: kept_info, file: ../../common/os/sunpm.c, line: 5219 Reviewed by: richlowe@richlowe.net Approved by: gwr@nexenta.com